Build iframe execution environment with Webpack

--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -44,6 +44,7 @@
     "build:lavamoat": "lavamoat scripts/build.js --policy lavamoat/build-system/policy.json  --policyOverride lavamoat/build-system/policy-override.json",
     "build:lavamoat:policy": "yarn build:lavamoat --writeAutoPolicy && node scripts/build.js --writeAutoPolicy",
     "build:post": "yarn build:lavamoat",
+    "build:webpack": "webpack",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/snaps-execution-environments",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/snaps-execution-environments",
     "clean": "rimraf '*.tsbuildinfo' 'dist' 'src/__GENERATED__/' 'coverage/*' '__test__/*'",
@@ -107,6 +108,7 @@
     "babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "crypto-browserify": "^3.12.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "esbuild": "^0.18.10",
@@ -119,6 +121,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "expect-webdriverio": "^4.4.1",
+    "html-webpack-plugin": "^5.5.3",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.5",
@@ -130,17 +133,25 @@
     "lavamoat-browserify": "^17.0.5",
     "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.5.2",
+    "process": "^0.11.10",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
     "ses": "^1.1.0",
+    "stream-browserify": "^3.0.0",
+    "swc-loader": "^0.2.3",
     "terser": "^5.17.7",
     "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "tty-browserify": "^0.0.1",
     "typescript": "~5.3.3",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.0.5",
     "wdio-chromedriver-service": "^8.1.1",
     "wdio-geckodriver-service": "^5.0.2",
     "webdriverio": "^8.19.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.10.0",
     "yargs": "^17.7.1"
   },
   "engines": {
