--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -86,6 +86,7 @@
     "@lavamoat/allow-scripts": "^3.0.4",
     "@lavamoat/lavapack": "^6.1.1",
     "@lavamoat/lavatube": "^1.0.0",
+    "@lavamoat/webpack": "./lavamoat-webpack-0.0.1-beta.0.tgz",
     "@metamask/auto-changelog": "^3.4.4",
     "@metamask/eslint-config": "^12.1.0",
     "@metamask/eslint-config-jest": "^12.1.0",
@@ -97,6 +98,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
+    "@types/webpack-bundle-analyzer": "^4.6.3",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^6.21.0",
     "@wdio/browser-runner": "^8.19.0",
@@ -150,6 +152,7 @@
     "wdio-geckodriver-service": "^5.0.2",
     "webdriverio": "^8.19.0",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0",
     "yargs": "^17.7.1"
