Grant permitted chains permission on install/update

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -85,11 +85,14 @@
     "@metamask/json-rpc-engine": "^10.0.2",
     "@metamask/json-rpc-middleware-stream": "^8.0.7",
     "@metamask/key-tree": "^10.1.1",
+    "@metamask/multichain": "^2.1.1",
+    "@metamask/network-controller": "^22.1.1",
     "@metamask/object-multiplex": "^2.1.0",
     "@metamask/permission-controller": "^11.0.6",
     "@metamask/phishing-controller": "^12.5.0",
     "@metamask/post-message-stream": "^10.0.0",
     "@metamask/rpc-errors": "^7.0.2",
+    "@metamask/selected-network-controller": "^20.0.2",
     "@metamask/snaps-registry": "^3.2.3",
     "@metamask/snaps-rpc-methods": "workspace:^",
     "@metamask/snaps-sdk": "workspace:^",
