Add platform version field to manifest (#2803)
This adds a new field to the manifest, `platformVersion`. It is intended
to be set to the current version of the Snaps SDK, and if set, is
checked by the Snap controller to make sure the current supported
version by the Snaps Platform is equal or newer than the specified
`platformVersion`.

I've added a feature flag `rejectInvalidPlatformVersion` which, when
enabled, will throw an error upon installation if specified platform
version is too new. Otherwise it simply logs a warning in the console.

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -102,6 +102,7 @@
     "nanoid": "^3.1.31",
     "readable-stream": "^3.6.2",
     "readable-web-to-node-stream": "^3.0.2",
+    "semver": "^7.5.4",
     "tar-stream": "^3.1.7"
   },
   "devDependencies": {
@@ -125,6 +126,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/readable-stream": "^4.0.15",
+    "@types/semver": "^7.5.0",
     "@types/tar-stream": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^6.21.0",
