--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -78,6 +78,10 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
+  "resolutions": {
+    "@metamask/utils@npm:^9.0.0": "@metamask/utils@npm:^10.0.0",
+    "@metamask/utils@npm:^9.1.0": "@metamask/utils@npm:^10.0.0"
+  },
   "dependencies": {
     "@metamask/approval-controller": "^7.0.2",
     "@metamask/base-controller": "^6.0.2",
