--- a/packages/snaps-jest/package.json
+++ b/packages/snaps-jest/package.json
@@ -56,6 +56,10 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
+  "resolutions": {
+    "@metamask/utils@npm:^9.0.0": "@metamask/utils@npm:^10.0.0",
+    "@metamask/utils@npm:^9.1.0": "@metamask/utils@npm:^10.0.0"
+  },
   "dependencies": {
     "@jest/environment": "^29.5.0",
     "@jest/expect": "^29.5.0",
