Update example permissions

--- a/packages/examples/packages/ledger/snap.manifest.json
+++ b/packages/examples/packages/ledger/snap.manifest.json
@@ -17,7 +17,9 @@
     }
   },
   "initialPermissions": {
-    "endowment:devices": {}
+    "endowment:rpc": {
+      "dapps": true
+    }
   },
   "manifestVersion": "0.1"
 }
