--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -95,6 +95,7 @@
     "@metamask/utils": "^9.2.1",
     "@types/w3c-web-hid": "^1.0.6",
     "@xstate/fsm": "^2.0.0",
+    "async-mutex": "^0.4.0",
     "browserify-zlib": "^0.2.0",
     "concat-stream": "^2.0.0",
     "fast-deep-equal": "^3.1.3",
