--- a/packages/examples/packages/bip32/snap.manifest.json
+++ b/packages/examples/packages/bip32/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "dWCQ3BjoAmv1KlzbrNPRa4QlB3qSHQKL6ONaV0mo7b0=",
+    "shasum": "BXI9661L/fYaiBpXRSdqkP8BMOngNdoo9FwYTbrY7+s=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -43,5 +43,6 @@
       }
     ]
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
