--- a/packages/examples/packages/ethereum-provider/snap.manifest.json
+++ b/packages/examples/packages/ethereum-provider/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "cFhK3nsekRxmXeas/P58bEzMVeLhbtp+ZeCDQ5LTtSs=",
+    "shasum": "HYGsbZCa1cbaJLBU9dcQziEhKS1KD/sesQgTxZVI9lc=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -22,5 +22,6 @@
     },
     "endowment:ethereum-provider": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
