--- a/packages/examples/packages/file-upload/snap.manifest.json
+++ b/packages/examples/packages/file-upload/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "14D89bvKXu2AM/k7XG9b7LhSxbf4mJq+8xdfpAAFXE8=",
+    "shasum": "xk2qj65HFB618cIUh/sYWfLrviSfgu8C+7Fnv6qsDWE=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -24,5 +24,6 @@
     "snap_dialog": {},
     "snap_manageState": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
