--- a/packages/examples/packages/get-entropy/snap.manifest.json
+++ b/packages/examples/packages/get-entropy/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "1jPm8koZvt+Tme7DCtogqKfS+fR4SJnPU7N8r85ku1Y=",
+    "shasum": "s/mu+Z/V/G7XwdIVMyuXvZ4ORhLTOQHSFdlwRlgfwuw=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -23,5 +23,6 @@
     "snap_dialog": {},
     "snap_getEntropy": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
