--- a/packages/examples/packages/interactive-ui/snap.manifest.json
+++ b/packages/examples/packages/interactive-ui/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "il7JIqsKAL7HdA9TDvZ3uaZ2DmhrvG3/06VlWLZqY3I=",
+    "shasum": "ProfhCT750VS73AYlE9ypKu95ZsGLLoHXmoEX8zKUt0=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -25,5 +25,6 @@
     "endowment:transaction-insight": {},
     "endowment:page-home": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
