--- a/packages/examples/packages/lifecycle-hooks/snap.manifest.json
+++ b/packages/examples/packages/lifecycle-hooks/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "lFAmVlA2xtorYkfuEClJwiSdLKvEvVx8bWDb3FaKdi4=",
+    "shasum": "I3HrKMbzbQslQrfoJZ6CPbPwUOJtl5GBudiJNV3xzJo=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -20,5 +20,6 @@
     "snap_dialog": {},
     "endowment:lifecycle-hooks": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
