--- a/packages/examples/packages/network-access/snap.manifest.json
+++ b/packages/examples/packages/network-access/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "nRsZQCtNSsaFiu3rzF/ymnflq7ZQQwwm/KnQTBzwav4=",
+    "shasum": "568PERukIcZVLcToP+a+moHyPJErIpXA2iTmreY92zQ=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -23,5 +23,6 @@
     },
     "endowment:network-access": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
