--- a/packages/examples/packages/rollup-plugin/snap.manifest.json
+++ b/packages/examples/packages/rollup-plugin/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "rPQS5d+6fj93/L4Y7L1oNp5v+8IobP+t6JAUW31ZSQA=",
+    "shasum": "P/mNUgdJyP6AHtNFl4/cj2Qkw2heVmn1u4LF0TWfSdQ=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,5 +21,6 @@
       "dapps": true
     }
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
