--- a/packages/examples/packages/send-flow/snap.manifest.json
+++ b/packages/examples/packages/send-flow/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "eiwEi6JZTZnPkriRaoiuFQX37mSHsdJEzO5MDZJGqOg=",
+    "shasum": "0zmrLyYqp4N2ZJNYnCPW9H0lXGNq23XMupxpJBVKWLU=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -23,5 +23,6 @@
     "snap_dialog": {},
     "endowment:page-home": {}
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
