--- a/packages/examples/packages/webpack-plugin/snap.manifest.json
+++ b/packages/examples/packages/webpack-plugin/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "7PgzAThtBB7Ay2cfYsGz8xhHXjzEfJWyW9d+Uh3gTX0=",
+    "shasum": "1tYoOe+sHrXpkzyRoNO5IJhxTRnGbLHcNY7+zG7hDOc=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,5 +21,6 @@
       "dapps": true
     }
   },
+  "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
 }
