--- a/packages/snaps-rpc-methods/package.json
+++ b/packages/snaps-rpc-methods/package.json
@@ -62,7 +62,8 @@
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^10.0.0",
-    "@noble/hashes": "^1.3.1"
+    "@noble/hashes": "^1.3.1",
+    "luxon": "^3.5.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -75,6 +76,7 @@
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
+    "@types/luxon": "^3",
     "@types/node": "18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^6.21.0",
