address PR comments

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -100,6 +100,7 @@
     "fast-deep-equal": "^3.1.3",
     "get-npm-tarball-url": "^2.0.3",
     "immer": "^9.0.6",
+    "luxon": "^3.5.0",
     "nanoid": "^3.1.31",
     "readable-stream": "^3.6.2",
     "readable-web-to-node-stream": "^3.0.2",
@@ -124,6 +125,7 @@
     "@types/concat-stream": "^2.0.0",
     "@types/gunzip-maybe": "^1.4.0",
     "@types/jest": "^27.5.1",
+    "@types/luxon": "^3",
     "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/readable-stream": "^4.0.15",
