--- a/packages/examples/packages/settings-page/snap.manifest.json
+++ b/packages/examples/packages/settings-page/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "9xTn79sMhMLJJgSKn/6kfI+VTEKv9J1acTVlM2Le2ac=",
+    "shasum": "vNHZLaHQGoWJeGCfYv0fGjVYdz+aBdcPwfkcpeKK+ks=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -17,7 +17,11 @@
     }
   },
   "initialPermissions": {
-    "endowment:page-settings": {}
+    "endowment:rpc": {
+      "dapps": true
+    },
+    "endowment:page-settings": {},
+    "snap_manageState": {}
   },
   "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
