--- a/packages/examples/packages/settings-page/snap.manifest.json
+++ b/packages/examples/packages/settings-page/snap.manifest.json
@@ -1,17 +1,17 @@
 {
-  "version": "2.1.3",
-  "description": "MetaMask example snap demonstrating how to use the Browserify plugin to bundle a snap.",
-  "proposedName": "Browserify Plugin Example Snap",
+  "version": "0.0.0",
+  "description": "MetaMask example snap demonstrating the use of settings pages.",
+  "proposedName": "Settings Page Example Snap",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "vr/JCeU5DXN3CeJIeLbZmr44rFnq+BGqQPng7kVxZGY=",
+    "shasum": "zDRgwSzsvtVtFr3F0SzUJCSCBNfix0C4CgTY98F+uDk=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
-        "packageName": "@metamask/browserify-plugin-example-snap",
+        "packageName": "@metamask/settings-page-example-snap",
         "registry": "https://registry.npmjs.org"
       }
     }
@@ -19,7 +19,9 @@
   "initialPermissions": {
     "endowment:rpc": {
       "dapps": true
-    }
+    },
+    "endowment:page-settings": {},
+    "snap_manageState": {}
   },
   "platformVersion": "6.13.0",
   "manifestVersion": "0.1"
