--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -70,6 +70,7 @@
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^10.0.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "fast-deep-equal": "^3.1.3",
     "mime": "^3.0.0",
     "readable-stream": "^3.6.2",
     "redux-saga": "^1.2.3"
