fix matchers to also include param for content

--- a/packages/examples/packages/notifications/tsconfig.json
+++ b/packages/examples/packages/notifications/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": false,
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "jsx": "react-jsxdev",
+    "composite": false
   },
   "include": ["src", "snap.config.ts"]
 }
