--- a/packages/examples/packages/cronjobs/snap.manifest.json
+++ b/packages/examples/packages/cronjobs/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "E8SzmLlC0rgCn0qOop9/zCLmrWLABS5LlnaQv/MYkUc=",
+    "shasum": "6RCKkCSH+tCAKsXIzAjpaZrWjvGDXbkMcuaCslVvwr4=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -17,6 +17,10 @@
     }
   },
   "initialPermissions": {
+    "endowment:rpc": {
+      "dapps": true,
+      "snaps": false
+    },
     "endowment:cronjob": {
       "jobs": [
         {
@@ -27,7 +31,8 @@
         }
       ]
     },
-    "snap_dialog": {}
+    "snap_dialog": {},
+    "snap_notify": {}
   },
   "platformVersion": "6.14.0",
   "manifestVersion": "0.1"
