--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -95,6 +95,7 @@
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/utils": "^10.0.0",
     "@xstate/fsm": "^2.0.0",
+    "async-mutex": "^0.5.0",
     "browserify-zlib": "^0.2.0",
     "concat-stream": "^2.0.0",
     "fast-deep-equal": "^3.1.3",
