--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint:dependencies": "yarn workspaces foreach --all --parallel --verbose run lint:dependencies && yarn dedupe --check",
     "lint:eslint": "eslint . --cache --ext js,cjs,mjs,jsx,ts,mts,cts,tsx",
     "lint:fix": "yarn workspaces foreach --all --parallel run lint:eslint --fix && yarn lint:misc --write && yarn lint:tsconfig && yarn constraints --fix && yarn dedupe",
-    "lint:misc": "prettier --no-error-on-unmatched-pattern --loglevel warn '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' '**/*.html'",
+    "lint:misc": "prettier --no-error-on-unmatched-pattern --log-level warn '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' '**/*.html'",
     "lint:tsconfig": "node scripts/verify-tsconfig.mjs",
     "prepare-preview-builds": "./scripts/prepare-preview-builds.sh",
     "publish-previews": "yarn workspaces foreach --all --parallel --verbose run publish:preview",
@@ -95,12 +95,12 @@
     "chromedriver": "^131.0.5",
     "depcheck": "^1.4.7",
     "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsdoc": "^41.1.2",
     "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "execa": "^5.1.1",
     "favicons": "^7.1.2",
@@ -110,7 +110,7 @@
     "lint-staged": "^12.4.1",
     "lodash": "^4.17.21",
     "minimatch": "^7.4.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.2",
     "prettier-plugin-packagejson": "^2.5.2",
     "rimraf": "^4.1.2",
     "semver": "^7.5.4",
