--- a/packages/examples/packages/invoke-snap/package.json
+++ b/packages/examples/packages/invoke-snap/package.json
@@ -35,11 +35,11 @@
     "lint:misc": "prettier --no-error-on-unmatched-pattern --log-level warn \"**/*.json\" \"**/*.md\" \"**/*.html\" \"!CHANGELOG.md\" \"!snap.manifest.json\" \"!packages/**\" --ignore-path ../../../../.gitignore",
     "since-latest-release": "../../../../scripts/since-latest-release.sh",
     "start": "yarn workspaces foreach --worktree --parallel --verbose --interlaced --jobs unlimited run start",
-    "test": "jest --reporters=jest-silent-reporter",
-    "test:clean": "jest --clearCache",
+    "test": "node --experimental-vm-modules $(yarn bin jest) --reporters=jest-silent-reporter",
+    "test:clean": "node --experimental-vm-modules $(yarn bin jest) --clearCache",
     "test:post": "jest-it-up",
-    "test:verbose": "jest --verbose",
-    "test:watch": "jest --watch"
+    "test:verbose": "node --experimental-vm-modules $(yarn bin jest) --verbose",
+    "test:watch": "node --experimental-vm-modules $(yarn bin jest) --watch"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
