--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -70,13 +70,13 @@
     "lint:misc": "prettier --no-error-on-unmatched-pattern --log-level warn \"**/*.json\" \"**/*.md\" \"**/*.html\" \"!CHANGELOG.md\" --ignore-path ../../.gitignore",
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
-    "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
+    "test": "node --experimental-vm-modules $(yarn bin jest) --reporters=jest-silent-reporter && yarn test:browser",
     "test:browser": "wdio run wdio.config.js",
-    "test:clean": "jest --clearCache",
+    "test:clean": "node --experimental-vm-modules $(yarn bin jest) --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/wdio",
     "test:pre": "yarn mkdirp test/fixtures && ./scripts/generate-fixtures.sh",
-    "test:verbose": "jest --verbose",
-    "test:watch": "jest --watch"
+    "test:verbose": "node --experimental-vm-modules $(yarn bin jest) --verbose",
+    "test:watch": "node --experimental-vm-modules $(yarn bin jest) --watch"
   },
   "dependencies": {
     "@metamask/approval-controller": "^7.1.2",
