--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -4,23 +4,18 @@ on:
   issue_comment:
     types:
       - created
+  workflow_call:
+    inputs:
+      dependabot:
+        type: boolean
+        required: false
+        default: false
   pull_request:
     types:
       - opened
       - synchronize
 
 jobs:
-  is-dependabot:
-    name: Determine whether this pull request was opened by Dependabot
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'MetaMask/snaps' }}
-    runs-on: ubuntu-latest
-    outputs:
-      IS_DEPENDABOT: ${{ steps.is-dependabot.outputs.IS_DEPENDABOT }}
-    steps:
-      - name: Determine whether this PR was opened by Dependabot
-        id: is-dependabot
-        run: echo "IS_DEPENDABOT=true" >> "$GITHUB_OUTPUT"
-
   is-fork-pull-request:
     name: Determine whether this issue comment was on a pull request from a fork
     if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '@metamaskbot update-pr') }}
@@ -41,9 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - is-fork-pull-request
-      - is-dependabot
     # Early exit if this is a fork, since later steps are skipped for forks.
-    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' && needs.is-dependabot.outputs.IS_DEPENDABOT != 'true' }}
+    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' && inputs.dependabot == false }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -65,9 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - is-fork-pull-request
-      - is-dependabot
     # Early exit if this is a fork, since later steps are skipped for forks.
-    if: ${{ needs.is-dependabot.outputs.IS_DEPENDABOT == 'true' || needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
+    if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
     outputs:
       COMMIT_SHA: ${{ steps.commit-sha.outputs.COMMIT_SHA }}
     steps:
@@ -193,7 +186,6 @@ jobs:
     name: Commit result
     runs-on: ubuntu-latest
     needs:
-      - is-dependabot
       - prepare
       - dedupe-yarn-lock
       - regenerate-lavamoat-policies
@@ -224,7 +216,7 @@ jobs:
           key: cache-yarn-lock-${{ needs.prepare.outputs.COMMIT_SHA }}
           fail-on-cache-miss: true
       - name: Set commit prefix
-        if: ${{ needs.is-dependabot.outputs.IS_DEPENDABOT == 'true' }}
+        if: ${{ inputs.dependabot == true }}
         run: echo "COMMIT_PREFIX='[dependabot skip] '" >> "$GITHUB_ENV"
       - name: Commit yarn.lock
         run: |
