--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -5,6 +5,11 @@ on:
     types:
       - created
   workflow_call:
+    secrets:
+      GITHUB_TOKEN:
+        required: true
+      PULL_REQUEST_UPDATE_TOKEN:
+        required: true
     inputs:
       dependabot:
         type: boolean
