Apply suggestions from code review
Co-authored-by: Maarten Zuidhoorn <maarten@zuidhoorn.com>

--- a/packages/examples/packages/protocol/snap.manifest.json
+++ b/packages/examples/packages/protocol/snap.manifest.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.0",
-  "description": "MetaMask example snap demonstrating the use of `endowment:protocol`",
+  "description": "MetaMask example Snap demonstrating the use of `endowment:protocol`",
   "proposedName": "Protocol Example Snap",
   "repository": {
     "type": "git",
