Update install Chrome script automatically for Dependabot PRs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
     with:
       dependabot: true
       pull-request: ${{ github.event.pull_request.number }}
+      pull-request-title: ${{ github.event.pull_request.title }}
     secrets:
       PULL_REQUEST_UPDATE_TOKEN: ${{ secrets.PULL_REQUEST_UPDATE_TOKEN }}
 
