--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -85,19 +85,17 @@
     "@lavamoat/allow-scripts": "^3.0.4",
     "@lavamoat/lavapack": "^6.1.1",
     "@lavamoat/lavatube": "^1.0.0",
-    "@metamask/auto-changelog": "^3.4.4",
-    "@metamask/eslint-config": "^12.1.0",
-    "@metamask/eslint-config-jest": "^12.1.0",
-    "@metamask/eslint-config-nodejs": "^12.1.0",
-    "@metamask/eslint-config-typescript": "^12.1.0",
+    "@metamask/auto-changelog": "^4.1.0",
+    "@metamask/eslint-config": "^14.0.0",
+    "@metamask/eslint-config-jest": "^14.0.0",
+    "@metamask/eslint-config-nodejs": "^14.0.0",
+    "@metamask/eslint-config-typescript": "^14.0.0",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^6.21.0",
     "@wdio/browser-runner": "^8.19.0",
     "@wdio/cli": "^8.19.0",
     "@wdio/globals": "^8.19.0",
@@ -110,14 +108,15 @@
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "esbuild": "^0.18.10",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-jsdoc": "^41.1.2",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import-x": "^4.3.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "expect-webdriverio": "^4.4.1",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
@@ -128,14 +127,15 @@
     "jest-silent-reporter": "^0.6.0",
     "lavamoat": "^8.0.4",
     "lavamoat-browserify": "^17.0.5",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.8",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
     "ses": "^1.1.0",
     "terser": "^5.17.7",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3",
+    "typescript-eslint": "^8.6.0",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.0.5",
     "wdio-chromedriver-service": "^8.1.1",
