--- a/packages/snaps-sdk/package.json
+++ b/packages/snaps-sdk/package.json
@@ -99,34 +99,34 @@
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
-    "@metamask/auto-changelog": "^3.4.4",
-    "@metamask/eslint-config": "^12.1.0",
-    "@metamask/eslint-config-jest": "^12.1.0",
-    "@metamask/eslint-config-nodejs": "^12.1.0",
-    "@metamask/eslint-config-typescript": "^12.1.0",
+    "@metamask/auto-changelog": "^4.1.0",
+    "@metamask/eslint-config": "^14.0.0",
+    "@metamask/eslint-config-jest": "^14.0.0",
+    "@metamask/eslint-config-nodejs": "^14.0.0",
+    "@metamask/eslint-config-typescript": "^14.0.0",
     "@ts-bridge/cli": "^0.6.1",
     "@types/jest": "^27.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^6.21.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-jsdoc": "^41.1.2",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import-x": "^4.3.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "expect-type": "^0.17.3",
     "jest": "^29.0.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-it-up": "^2.0.0",
     "jest-silent-reporter": "^0.6.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.8",
     "ts-jest": "^29.1.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.6.0"
   },
   "engines": {
     "node": "^18.16 || >=20"
