--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "get-release-tag": "ts-node --swc scripts/get-release-tag.ts",
     "postinstall": "simple-git-hooks",
     "install-chrome": "./scripts/install-chrome.sh",
-    "lint": "yarn workspaces foreach --all --parallel run lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
-    "lint:ci": "yarn lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
+    "lint": "yarn lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
     "lint:dependencies": "yarn workspaces foreach --all --parallel --verbose run lint:dependencies && yarn dedupe --check",
-    "lint:eslint": "eslint . --cache --ext js,cjs,mjs,jsx,ts,mts,cts,tsx",
+    "lint:eslint": "eslint . --cache",
     "lint:fix": "yarn workspaces foreach --all --parallel run lint:eslint --fix && yarn lint:misc --write && yarn lint:tsconfig && yarn constraints --fix && yarn dedupe",
     "lint:misc": "prettier --no-error-on-unmatched-pattern --loglevel warn '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' '**/*.html'",
     "lint:tsconfig": "node scripts/verify-tsconfig.mjs",
